Add uploads controller API and make changes to save supporting_documents
